; Test Environment Configuration
; Force filesystem backend to avoid external DB connection timeouts
(env
 (_
  (env-vars
   (MASC_STORAGE_TYPE filesystem)
   ; Ignore shell-level workspace overrides so tests stay isolated in temp dirs.
   ; Prevent inherited shell MASC_BASE_PATH from binding tests to real
   ; workspace state. Tests that need a base path pass it explicitly.
   (MASC_BASE_PATH "")
   ; Avoid non-deterministic external network calls during unit tests.
   (GRAPHQL_API_KEY "")
   (ZAI_API_KEY "")
   (MASC_KEEPER_SANDBOX_PREFLIGHT_ENABLED false)
   ; Docker playground upgrades Local→Docker in effective_sandbox_profile.
   ; Disable to ensure keeper_bash tests run through the local path.
   (MASC_KEEPER_DOCKER_PLAYGROUND false))))

; All standard tests share the masc_test_deps wrapper library
; (see test/deps/dune for the full dependency list).
;
; Tests below are grouped by compilation model:
;   (tests ...) = multiple binaries, shared library list
;   (test ...)  = single binary, special config needed

; Group 1: Pure synchronous tests
(tests
 (names test_attribution test_attribution_tagged test_autoresearch_result_bridge test_dashboard_attribution test_dashboard_oas_bridge test_masc_runtime_events test_room test_room_state_recovery test_types test_exec_tap test_auth test_auth_doctor test_auth_error_kind test_auth_login test_audit_log test_governance_anomaly test_http_negotiation
        test_attempt_state
        test_sse test_cancellation test_graphql_api
        test_graphql_endpoint
        test_subscriptions test_session test_progress test_spawn
        test_validation test_response
        test_channel_gate_connector_routes
        test_sidecar_lifecycle_routes
        test_channel_gate_imessage_state
        test_dashboard
        test_dashboard_perf
        test_dashboard_tool_host_events
        test_tool_assignment_telemetry
        test_dashboard_link_preview
        test_gate_keeper_backend
        test_transport_read_model
        test_multi_room test_worktree_detection test_bounded test_mention
        test_heartbeat_qw test_sse_qw test_sse_stream test_agent_health
        test_post_verifier
        test_reward_advice_artifact
        test_keeper_cascade_profile
        test_keeper_hooks_oas_provider
        test_keeper_hooks_oas_pricing
        test_keeper_hooks_oas_telemetry
        test_agent_stress
        test_keeper_tool_use_failure_counter
        test_keeper_compaction_outcome_counter
        test_keeper_usage_trust_counter
        test_cost_usd_source_attribution_10318
        test_cost_ledger_pricing_model_10318
        test_response_model_empty_10083
        test_heuristic_theatre_audit
        test_keeper_proactive_skip_counter
        test_oas_error_kind_counter
        test_board_author_identity_10297
        test_fsm_drift_counter
        test_gc_sampler
        test_process_timeout_counter
        test_git_fetch_timeout_9587
        test_auth_ambiguous_lookup_9786
        test_auth_load_credential_of
        test_keeper_wake_telemetry
        test_keeper_memory
        test_keeper_accountability
        test_reputation_ledger_v2
        test_reputation_multi_dim
        test_keeper_goal_repair
        test_accountability_emit_skip_10314
        test_keeper_exec_status
        test_keeper_pause_broadcast
        test_keeper_terminal_reason
        test_keeper_adaptive_thinking
        test_keeper_turn_intent
        test_keeper_lifecycle
        test_keeper_lifecycle_chaos
        test_keeper_rollover_gate
        test_keeper_generation_lineage
        test_keeper_deliberation
        test_keeper_registry
        test_keeper_supervisor
        test_keeper_alerting_path
        test_coord_eio_pure
        test_keeper_contract_classifier_pure
        test_keeper_compact_policy_pure
        test_heartbeat_smart
        test_env_config_nonneg
        test_keeper_allowed_paths
        test_keeper_repo_readiness
        test_keeper_tool_surface_guard
        test_keeper_benchmark_canary
        test_keeper_pr_review
        test_playground_paths
        test_keeper_llama_only
        test_keeper_meta_cwd_resilience
        test_metrics_rotation
        test_tool_access_policy
        test_tool_access_role
        test_tool_token
        test_tool_exposure
        test_autonomy_liberation
        test_keeper_unified
        test_decision_pipeline
        test_decision_pipeline_observer
        test_keeper_composite_observer
        test_keeper_fsm_edges
        test_keeper_fsm_guard_actions
        test_keeper_callback_hardening
        test_keeper_behavioral_regime
        test_keeper_toml
        test_keeper_runtime_toml
        test_keeper_tool_policy_config
        test_coord_worktree_policy_path
        test_claim_post_provision_hook
        test_keeper_toml_config_validation
        test_keeper_id
        test_repo_store
        test_chronicle_types
        test_chronicle_ingest
        test_chronicle_validate
        test_credential_store
        test_credential_materializer
        test_keeper_repo_mapping
        test_credential_provider_bridge
        test_repo_sync
        test_repo_git
        test_repo_e2e
        test_exec_core
        test_exec_dispatch
        test_keeper_bash_safety
        test_hitl_approval
        test_approval_callback_wired
        test_keeper_discovered_tools
        test_keeper_tool_affinity
        test_keeper_tool_alias
        test_keeper_sandbox_containment
        test_keeper_transition_audit
        test_keeper_shell_containment
        test_keeper_shell_docker_route
        test_keeper_shell_via_field
        test_env_git_noninteractive
        test_gh_exit_class
        test_gh_exit_class_wiring
        test_stay_silent_loop_detector
        test_oas_compat_cascade_fallback
        test_heuristic_metrics_boot_wireup
        test_heuristic_metrics_periodic_flush_10348
        test_cap_blocker_structured_error
        test_context_overflow_action_tracker
        test_keeper_fs_edit_patch
        test_keeper_docker_read
        test_keeper_path_ssot
        test_keeper_egress_audit
        test_keeper_mcp_provider_audit
        test_keeper_github_read_only
        test_worktree_live_context
        test_git_graph_snapshot
        test_worktree_status_single_flight_9632
        test_tool_input_validation
        test_failure_learnings_10325
        test_agent_stress_emit_10341
        test_autoresearch_codegen
        test_autoresearch_oas_primitives
        test_autoresearch_target_score
        test_cdal_conformance
        test_task_stage
        test_ocaml_north_star_task_lifecycle
        test_tool_blob_store
        test_tool_bridge_externalize
        test_keeper_artifact_hydrator
        test_artifacts_endpoint
        test_tool_output_washing_e2e
        test_keeper_context_core_dedup
        test_adversarial_eval
        test_labeling
        test_tool_deep_review
        test_tool_call_quality_benchmark
        test_keeper_prompt_metrics
        test_cache_metrics_wiring
        test_tool_surface_ssot
        test_keeper_retrieval_quality
        test_observability_redact
        test_observability_provider_contracts
        test_config_doctor
        test_cascade_toml_materialization
        test_cascade_toml_section_fallback_10259
        test_doctor_dispatch
        test_disk_hygiene_script
        test_run_local_script
        test_tool_prefilter
        test_keeper_state_machine
        test_keeper_state_machine_correspondence
        test_keeper_social_model_magentic_ledger_fsm
        test_keeper_overflow_recovery
        test_telemetry_unified
        test_telemetry_error_occurred_wire_10358
        test_keeper_topk_llm
        test_warn_root_causes
        test_memory_hooks
        test_agent_stress_timeout_wire_10341
        test_institution_episodes_failure_learnings_10325
        test_institution_of_string_fail_closed
        test_mid_turn_resume
        test_lockfree_atomic
        test_telemetry_observe
        test_keeper_typed_labels
        test_auth_resolve_labels
        test_keeper_classifier_helper
        test_persona_tool_reachability
        test_cascade_strategy_labels
        test_turn_id_propagation
        test_per_keeper_token_fallback
        test_auth_strict_mode
        test_keeper_turn_fsm_emit
        test_keeper_event_queue
        test_gh_api_classification
        test_actionable_path_action
        test_stale_kill_class
        test_provider_capability_matrix
        test_provider_error
        test_keeper_synthetic_marker
        test_keeper_turn_fsm_wired_sites
        test_effective_oas_env
        test_workspace_routes_keeper
        )
 (modules test_attribution test_attribution_tagged test_autoresearch_result_bridge test_dashboard_attribution test_dashboard_oas_bridge test_masc_runtime_events test_room test_room_state_recovery test_types test_exec_tap test_auth test_auth_doctor test_auth_error_kind test_auth_login test_audit_log test_governance_anomaly test_http_negotiation
          test_attempt_state
          test_sse test_cancellation test_graphql_api
          test_graphql_endpoint
          test_subscriptions test_session test_progress test_spawn
          test_validation test_response
          test_channel_gate_connector_routes
        test_sidecar_lifecycle_routes
          test_channel_gate_imessage_state
          test_dashboard
          test_dashboard_perf
          test_dashboard_tool_host_events
          test_tool_assignment_telemetry
          test_dashboard_link_preview
          test_gate_keeper_backend
          test_transport_read_model
          test_multi_room test_worktree_detection test_bounded test_mention
          test_heartbeat_qw test_sse_qw test_sse_stream test_agent_health
          test_post_verifier
        test_reward_advice_artifact
          test_keeper_cascade_profile
          test_keeper_hooks_oas_provider
          test_keeper_hooks_oas_pricing
          test_keeper_hooks_oas_telemetry
          test_agent_stress
          test_keeper_tool_use_failure_counter
          test_keeper_compaction_outcome_counter
          test_keeper_usage_trust_counter
          test_cost_usd_source_attribution_10318
          test_cost_ledger_pricing_model_10318
          test_response_model_empty_10083
          test_heuristic_theatre_audit
          test_keeper_proactive_skip_counter
          test_oas_error_kind_counter
          test_board_author_identity_10297
          test_fsm_drift_counter
          test_gc_sampler
          test_process_timeout_counter
          test_git_fetch_timeout_9587
          test_auth_ambiguous_lookup_9786
          test_auth_load_credential_of
          test_keeper_wake_telemetry
          test_keeper_memory
          test_keeper_accountability
          test_reputation_ledger_v2
          test_reputation_multi_dim
          test_keeper_goal_repair
          test_accountability_emit_skip_10314
          test_keeper_exec_status
          test_keeper_pause_broadcast
          test_keeper_terminal_reason
        test_keeper_adaptive_thinking
          test_keeper_turn_intent
          test_keeper_lifecycle
          test_keeper_lifecycle_chaos
          test_keeper_rollover_gate
          test_keeper_generation_lineage
          test_keeper_deliberation
          test_keeper_registry
          test_keeper_supervisor
          test_keeper_alerting_path
          test_coord_eio_pure
          test_keeper_contract_classifier_pure
          test_keeper_compact_policy_pure
          test_heartbeat_smart
          test_env_config_nonneg
          test_keeper_allowed_paths
          test_keeper_repo_readiness
          test_keeper_tool_surface_guard
          test_keeper_benchmark_canary
          test_keeper_pr_review
          test_playground_paths
          test_keeper_llama_only
          test_keeper_meta_cwd_resilience
          test_metrics_rotation
          test_tool_access_policy
          test_tool_access_role
          test_tool_token
          test_tool_exposure
          test_autonomy_liberation
          test_keeper_unified
          test_decision_pipeline
          test_decision_pipeline_observer
          test_keeper_composite_observer
          test_keeper_fsm_edges
          test_keeper_fsm_guard_actions
          test_keeper_callback_hardening
          test_keeper_behavioral_regime
          test_keeper_toml
          test_keeper_runtime_toml
          test_keeper_tool_policy_config
          test_coord_worktree_policy_path
          test_claim_post_provision_hook
          test_keeper_toml_config_validation
          test_keeper_id
          test_repo_store
          test_chronicle_types
          test_chronicle_ingest
          test_chronicle_validate
          test_credential_store
          test_credential_materializer
          test_keeper_repo_mapping
          test_credential_provider_bridge
          test_repo_sync
          test_repo_git
          test_repo_e2e
          test_exec_core
          test_exec_dispatch
          test_keeper_bash_safety
          test_hitl_approval
          test_approval_callback_wired
          test_keeper_discovered_tools
          test_keeper_tool_affinity
          test_keeper_tool_alias
          test_keeper_sandbox_containment
          test_keeper_transition_audit
          test_keeper_shell_containment
          test_keeper_shell_docker_route
          test_keeper_shell_via_field
          test_env_git_noninteractive
          test_gh_exit_class
          test_gh_exit_class_wiring
          test_stay_silent_loop_detector
          test_oas_compat_cascade_fallback
          test_heuristic_metrics_boot_wireup
          test_heuristic_metrics_periodic_flush_10348
          test_cap_blocker_structured_error
          test_context_overflow_action_tracker
          test_keeper_fs_edit_patch
          test_keeper_docker_read
          test_keeper_path_ssot
        test_keeper_egress_audit
          test_keeper_mcp_provider_audit
          test_keeper_github_read_only
          test_worktree_live_context
          test_git_graph_snapshot
          test_worktree_status_single_flight_9632
          test_tool_input_validation
          test_failure_learnings_10325
          test_agent_stress_emit_10341
          test_autoresearch_codegen
          test_autoresearch_oas_primitives
          test_autoresearch_target_score
          ; test_contract_risk removed (team session cleanup)
          ; test_contract_composer removed (team session cleanup)
          test_cdal_conformance
          test_task_stage
          test_ocaml_north_star_task_lifecycle
          ; test_risk_digest removed (team session cleanup)
          test_tool_blob_store
          test_tool_bridge_externalize
          test_keeper_artifact_hydrator
          test_artifacts_endpoint
          test_tool_output_washing_e2e
          test_keeper_context_core_dedup
          test_adversarial_eval
          test_labeling
          test_tool_deep_review
          test_tool_call_quality_benchmark
          test_keeper_prompt_metrics
          test_cache_metrics_wiring
          test_tool_surface_ssot
          test_keeper_retrieval_quality
          test_observability_redact
          test_observability_provider_contracts
          test_config_doctor
          test_cascade_toml_materialization
          test_cascade_toml_section_fallback_10259
          test_doctor_dispatch
          test_disk_hygiene_script
          test_run_local_script
          test_tool_prefilter
          test_keeper_state_machine
          test_keeper_state_machine_correspondence
          test_keeper_social_model_magentic_ledger_fsm
          test_keeper_overflow_recovery
          test_telemetry_unified
          test_telemetry_error_occurred_wire_10358
          test_keeper_topk_llm
          test_warn_root_causes
          test_memory_hooks
          test_agent_stress_timeout_wire_10341
          test_institution_episodes_failure_learnings_10325
          test_institution_of_string_fail_closed
          test_mid_turn_resume
          test_lockfree_atomic
          test_telemetry_observe
          test_keeper_typed_labels
          test_auth_resolve_labels
          test_keeper_classifier_helper
          test_persona_tool_reachability
          test_cascade_strategy_labels
          test_turn_id_propagation
          test_per_keeper_token_fallback
          test_auth_strict_mode
          test_keeper_turn_fsm_emit
          test_keeper_event_queue
          test_gh_api_classification
          test_actionable_path_action
          test_stale_kill_class
          test_provider_capability_matrix
          test_provider_error
          test_keeper_synthetic_marker
          test_keeper_turn_fsm_wired_sites
          test_effective_oas_env
          test_workspace_routes_keeper
          )
 (libraries masc_test_deps multimodal))

; Group 2: Property-based tests (QCheck)
(tests
 (names test_pbt_mention test_pbt_validation test_pbt_text_processing test_pbt_context_overflow
        test_keeper_state_machine_pbt test_telemetry_eio_pbt
        test_metrics_store_eio_pbt test_prompt_registry_pbt
        test_keeper_fsm_joints)
 (modules test_pbt_mention test_pbt_validation test_pbt_text_processing test_pbt_context_overflow
          test_keeper_state_machine_pbt test_telemetry_eio_pbt
          test_metrics_store_eio_pbt test_prompt_registry_pbt
          test_keeper_fsm_joints)
 (libraries masc_test_deps))

; Focused single-module tests

; Group 3: Eio-native tests (single-module, standard deps)
; Merged from ~100 individual (test ...) stanzas.
(tests
 (names
        test_runtime_params
        test_config_dir_resolver
        test_room_coverage
        test_streamable_http
        test_dashboard_mission
        test_dashboard_mission_briefing
        ; test_command_plane_help removed (CP purge)

        test_dashboard_cache
        test_dashboard_execution
        test_dashboard_http_core
        test_dashboard_autoresearch
        test_dashboard_harness_health
        test_eval_feed
        test_dashboard_tools
        test_dashboard_cascade
        test_dashboard_verification
        test_tool_quality_classify
        test_tui_decode
        test_dashboard_governance
        test_dashboard_labels
        test_dashboard_safe_autonomy
        test_dashboard_surface_readiness
        test_activity_graph
        test_masc_log
        test_dashboard_namespace_truth
        test_server_runtime_bootstrap
        test_server_base_path_diagnostics
        test_server_startup_takeover
        test_keeper_meta_listing
        test_keeper_meta_cas_retry
        test_judge_diagnostics
        test_judge_json_recovery
        test_keeper_cli_mcp_config
        test_board_vote_quarantine
        test_keeper_identity_parse
        test_keeper_identity_normalize
        test_coord_join_fail_closed
        test_keeper_personality_io_parse
        test_keeper_personality_io_coerce
        test_keeper_personality_io_validate
        test_keeper_personality_io_compare
        test_keeper_personality_io_render
        test_keeper_identity_outcome_label
        test_worker_runtime
        test_capability_registry
        test_tool_local_runtime_verify
        test_tool_local_runtime_probe
        test_board_ttl
        test_worker_dev_tools
        test_shadow_parse
        test_destructive_class
        test_gate_diff
        test_legendary_counters
        test_legendary_bash_bg_tasks_route
        test_oas_integration
        test_memory_oas_5tier
        test_verifier_oas_bridge
        test_oas_adapters
        test_cache_eio
        test_metrics_store_eio
        test_planning_eio
        test_thompson_sampling
        test_safe_ops
        test_json_util
        test_process_eio_coverage
        test_with_process_coverage
        test_bg_task_stub
        test_process_eio_detached
        test_provider_adapter
        test_worker_container_coverage
        test_resilience
        test_common
        test_room_messages_raw
        ; test_cp_cleanup, test_cp_search_fabric, test_cp_section_cache, test_cp_jsonl_tail removed (CP purge)
        test_local_runtime_pool
        test_keeper_tools_oas
        test_keeper_tool_exposure
        test_keeper_runtime_denylist
        test_keeper_runtime_config_ssot
        test_dashboard_render_timing_9766
        test_gh_command_blocked_message_10561
        test_keeper_turn_timeout_default_10456
        test_task_status_label_10421
        test_task_completion_path_10449
        test_filter_rejection_10474
        test_sandbox_inspect_trim_10488
        test_credential_alias_10440
        test_credential_provider
        test_cascade_trust
        test_dashboard_k2_feeds
        test_keeper_profile_normalize_10552
        test_personality_field_diff_10269
        test_toml_skip_dedup_10259
        test_discovery_history_models_10404
        test_masc_log_utc_filename_10392
        test_keeper_task_dispatch
        test_keeper_tag_dispatch
        test_autoresearch_knowledge
        test_mcp_server_eio
        test_mcp_server_eio_call_tool
        test_code_navigation_eio
        test_backend
        test_room_eio
        test_http_server_eio
        test_compression
        test_fs_compat
        test_concurrency_stress
        test_eio_mutex_concurrency
        test_board_dispatch
        test_board_fixture_detector
        test_vote_ts_preservation_10086

        test_task_dispatch
        test_drift_guard_core
        test_verify_handoff_tool
        test_memory_horizon_classifier
        test_param_type_classifier
        test_tool_contract_truth
        test_file_lock_eio
        test_error_logging_coverage
        test_agent_identity
        test_mcp_full_cycle
        test_agent_registry_eio
        test_identity_e2e
        test_identity_edge_cases
        test_verification
        test_pulse
        test_transport_metrics
        test_adaptive_cache_ttl
        test_keeper_compact_audit
        test_oas_bus_instrument
        test_tool_compact
        test_trajectory
        test_eval_gate
        test_eval_harness
        test_tool_board_coverage
        test_anti_rationalization_fail_mode
        test_board_truncation_detection
        ; test_proof_criteria removed (team session cleanup)
        test_tool_registration_consistency
        ; test_tree_index removed (CP purge)
        test_tool_registry
        test_tool_dispatch
        test_tool_spec
        test_typed_tool_masc
        test_state_product
        test_coordination_product
        test_tool_result
        test_tool_hooks
        test_governance_pipeline
        test_keeper_routine_allowlist
        test_keeper_agent_isolation
        test_sse_external_sub
        test_ws_transport
        test_webrtc_signaling
        test_transport_integration
        test_tool_metrics
        test_tool_metrics_persist
        test_model_inference_metrics
        test_keeper_tool_call_log
        test_tool_unified
        test_build_identity
        test_workflow_guide
        test_agent_economy
        test_lifecycle
        test_auto_recall_activity_coverage
        test_grpc_coordination
        test_grpc_client
        test_http_protocol_detect
        test_keeper_safety_gates
        test_keeper_guards
        test_eval_gate_evasion
        test_prompt_registry_defaults
        test_keeper_recurring
        test_cdal_types
        test_cdal_loader
        test_cdal_judge
        test_cdal_verifiable_markers
        test_cdal_eval_v1
        test_cdal_friction_projection
        test_cdal_verdict_gate
        test_verification_fsm
        test_task_sandbox
        test_governance_yojson_roundtrip
        test_eval_calibration
        test_goal_janitor
        test_goal_tools
        test_goal_upsert_fsm_bypass_10247
        test_goal_store
        test_goal_verification
        test_string_util
        test_board_core_payload
        test_voice_config)
 (modules
        test_runtime_params
        test_config_dir_resolver
        test_room_coverage
        test_streamable_http
        test_dashboard_mission
        test_dashboard_mission_briefing
        ; test_command_plane_help removed (CP purge)

        test_dashboard_cache
        test_dashboard_execution
        test_dashboard_http_core
        test_dashboard_autoresearch
        test_dashboard_harness_health
        test_eval_feed
        test_dashboard_tools
        test_dashboard_cascade
        test_dashboard_verification
        test_tool_quality_classify
        test_tui_decode
        test_dashboard_governance
        test_dashboard_labels
        test_dashboard_safe_autonomy
        test_dashboard_surface_readiness
        test_activity_graph
        test_masc_log
        test_dashboard_namespace_truth
        test_server_runtime_bootstrap
        test_server_base_path_diagnostics
        test_server_startup_takeover
        test_keeper_meta_listing
        test_keeper_meta_cas_retry
        test_judge_diagnostics
        test_judge_json_recovery
        test_keeper_cli_mcp_config
        test_board_vote_quarantine
        test_keeper_identity_parse
        test_keeper_identity_normalize
        test_coord_join_fail_closed
        test_keeper_personality_io_parse
        test_keeper_personality_io_coerce
        test_keeper_personality_io_validate
        test_keeper_personality_io_compare
        test_keeper_personality_io_render
        test_keeper_identity_outcome_label
        test_worker_runtime
        test_capability_registry
        test_tool_local_runtime_verify
        test_tool_local_runtime_probe
        test_board_ttl
        test_worker_dev_tools
        test_shadow_parse
        test_destructive_class
        test_gate_diff
        test_legendary_counters
        test_legendary_bash_bg_tasks_route
        test_oas_integration
        test_memory_oas_5tier
        test_verifier_oas_bridge
        test_oas_adapters
        test_cache_eio
        test_metrics_store_eio
        test_planning_eio
        test_thompson_sampling
        test_safe_ops
        test_json_util
        test_process_eio_coverage
        test_with_process_coverage
        test_bg_task_stub
        test_process_eio_detached
        test_provider_adapter
        test_worker_container_coverage
        test_resilience
        test_common
        test_room_messages_raw
        ; test_cp_cleanup, test_cp_search_fabric, test_cp_section_cache, test_cp_jsonl_tail removed (CP purge)
        test_local_runtime_pool
        test_keeper_tools_oas
        test_keeper_tool_exposure
        test_keeper_runtime_denylist
        test_keeper_runtime_config_ssot
        test_dashboard_render_timing_9766
        test_gh_command_blocked_message_10561
        test_keeper_turn_timeout_default_10456
        test_task_status_label_10421
        test_task_completion_path_10449
        test_filter_rejection_10474
        test_sandbox_inspect_trim_10488
        test_credential_alias_10440
        test_credential_provider
        test_cascade_trust
        test_dashboard_k2_feeds
        test_keeper_profile_normalize_10552
        test_personality_field_diff_10269
        test_toml_skip_dedup_10259
        test_discovery_history_models_10404
        test_masc_log_utc_filename_10392
        test_keeper_task_dispatch
        test_keeper_tag_dispatch
        test_autoresearch_knowledge
        test_mcp_server_eio
        test_mcp_server_eio_call_tool
        test_code_navigation_eio
        test_backend
        test_room_eio
        test_http_server_eio
        test_compression
        test_fs_compat
        test_concurrency_stress
        test_eio_mutex_concurrency
        test_board_dispatch
        test_board_fixture_detector
        test_vote_ts_preservation_10086

        test_task_dispatch
        test_drift_guard_core
        test_verify_handoff_tool
        test_memory_horizon_classifier
        test_param_type_classifier
        test_tool_contract_truth
        test_file_lock_eio
        test_error_logging_coverage
        test_agent_identity
          test_mcp_full_cycle
          test_agent_registry_eio
          test_identity_e2e
        test_identity_edge_cases
        test_verification
        test_pulse
        test_transport_metrics
        test_adaptive_cache_ttl
        test_keeper_compact_audit
        test_oas_bus_instrument
        test_tool_compact
        test_trajectory
        test_eval_gate
        test_eval_harness
        test_tool_board_coverage
        test_anti_rationalization_fail_mode
        test_board_truncation_detection
        test_tool_registration_consistency
        ; test_tree_index removed (CP purge)
        test_tool_registry
        test_tool_dispatch
        test_tool_spec
        test_typed_tool_masc
        test_state_product
        test_coordination_product
        test_tool_result
        test_tool_hooks
        test_governance_pipeline
        test_keeper_routine_allowlist
        test_keeper_agent_isolation
        test_sse_external_sub
        test_ws_transport
        test_webrtc_signaling
        test_transport_integration
        test_tool_metrics
        test_tool_metrics_persist
        test_model_inference_metrics
        test_tool_unified
        test_keeper_tool_call_log
        test_build_identity
        test_workflow_guide
        test_agent_economy
        test_lifecycle
        test_auto_recall_activity_coverage
        test_grpc_coordination
        test_grpc_client
        test_http_protocol_detect
        test_keeper_safety_gates
        test_keeper_guards
        test_eval_gate_evasion
        test_prompt_registry_defaults
        test_keeper_recurring
        test_cdal_types
        test_cdal_loader
        test_cdal_judge
        test_cdal_verifiable_markers
        test_cdal_eval_v1
        test_cdal_friction_projection
        test_cdal_verdict_gate
        test_verification_fsm
        test_task_sandbox
        test_governance_yojson_roundtrip
        test_eval_calibration
        test_goal_janitor
        test_goal_tools
        test_goal_upsert_fsm_bypass_10247
        test_goal_store
        test_goal_verification
        test_string_util
        test_board_core_payload
        test_voice_config)
 (libraries masc_test_deps)
 (deps ../bin/main_eio.exe))

; Group 4: Coverage tests (generated by Agent Autonomy)
(tests
 (names test_admission_queue_coverage
        test_backend_coverage test_tools_coverage test_types_utils_coverage
        test_tempo_coverage test_transport_coverage test_validation_coverage
        test_dashboard_resilience_coverage
        test_nickname_coverage test_level2_config_coverage
        test_config_coverage
        test_progress_coverage
        test_mcp_protocol_coverage test_notify_coverage
        test_mcp_session_coverage test_sse_coverage
        test_credits_dashboard_coverage test_room_utils_coverage
        test_orchestrator_coverage test_cancellation_coverage
        test_web_dashboard_coverage test_auth_coverage
        test_mention_coverage test_resilience_coverage
        test_types_coverage test_spawn_coverage test_dashboard_coverage
        test_rate_limit_coverage test_bounded_coverage test_session_coverage
        test_cache_eio_coverage test_run_eio_coverage
        test_handover_eio_coverage test_mcp_server_eio_coverage
        test_http_server_eio_coverage test_telemetry_eio_coverage
        test_room_git_coverage test_prometheus_coverage
        test_auto_responder_coverage test_tool_plan_coverage
        test_tool_worktree_coverage
        test_tool_agent_coverage
        test_tool_task_coverage test_tool_coord_coverage
        test_tool_control_coverage test_tool_misc_coverage
        test_ag_ui_coverage
        test_tool_suspend_coverage test_tool_code_coverage
        test_tool_code_write_coverage
        test_tool_code_read_containment
        test_tool_library_coverage test_tool_shard_coverage
        test_context_compact_oas_coverage test_keeper_masc_bridge
        test_anti_rationalization_coverage test_field_validation
        test_circuit_breaker)
 (modules test_admission_queue_coverage
        test_backend_coverage test_tools_coverage test_types_utils_coverage
        test_tempo_coverage test_transport_coverage test_validation_coverage
        test_dashboard_resilience_coverage
        test_nickname_coverage test_level2_config_coverage
        test_config_coverage
        test_progress_coverage
        test_mcp_protocol_coverage test_notify_coverage
        test_mcp_session_coverage test_sse_coverage
        test_credits_dashboard_coverage test_room_utils_coverage
        test_orchestrator_coverage test_cancellation_coverage
        test_web_dashboard_coverage test_auth_coverage
        test_mention_coverage test_resilience_coverage
        test_types_coverage test_spawn_coverage test_dashboard_coverage
        test_rate_limit_coverage test_bounded_coverage test_session_coverage
        test_cache_eio_coverage test_run_eio_coverage
        test_handover_eio_coverage test_mcp_server_eio_coverage
        test_http_server_eio_coverage test_telemetry_eio_coverage
        test_room_git_coverage test_prometheus_coverage
        test_auto_responder_coverage test_tool_plan_coverage
        test_tool_worktree_coverage
        test_tool_agent_coverage
        test_tool_task_coverage test_tool_coord_coverage
        test_tool_control_coverage test_tool_misc_coverage
        test_ag_ui_coverage
        test_tool_suspend_coverage test_tool_code_coverage
        test_tool_code_write_coverage
        test_tool_code_read_containment
        test_tool_library_coverage test_tool_shard_coverage
        test_context_compact_oas_coverage test_keeper_masc_bridge
        test_anti_rationalization_coverage test_field_validation
        test_circuit_breaker)
 (libraries masc_test_deps))

; Special: Multi-module test suites

; test_command_plane_v2 removed (CP purge)

; test_cp_unit_descendant_ids removed (CP purge)

; test_failover_leader removed (CP purge)

; Keeper Tool Matrix — shared case modules as a library
(library
 (name keeper_tool_matrix_cases_lib)
 (wrapped false)
 (modules test_keeper_tool_matrix_cases test_mcp_tool_matrix_cases)
 (libraries masc_test_deps))

; Special: Custom compiler flags

; Special: E2E tests requiring server binary
; These tests start/connect to an actual MASC MCP server process.
; Skip by default; run with: MASC_E2E_TESTS=true dune test

; Special: Minimal dependency tests (CI scripts, governance)
; Special: Heartbeat/keeper minimal deps


; Executables (benchmarks, distributed tests, tools)

; test_cp_search_fabric_benchmark removed (CP purge)

(executable
 (name test_repo_synthesis_benchmark)
 (modules test_repo_synthesis_benchmark)
 (libraries masc_test_deps))

(executable
 (name tool_call_quality_benchmark_cli)
 (modules tool_call_quality_benchmark_cli)
 (libraries masc_test_deps))


(executable
 (name test_a12_e2e_demo)
 (modules test_a12_e2e_demo)
 (libraries masc_test_deps multimodal resilience shared_audit shared_types))

(executable
 (name test_concurrent_distributed)
 (modules test_concurrent_distributed)
 (libraries masc_test_deps))

(executable
 (name test_mention_monkey)
 (modules test_mention_monkey)
 (libraries masc_test_deps))

(executable
 (name test_atomic_simple)
 (modules test_atomic_simple)
 (libraries masc_test_deps))

(executable
 (name test_masc_context_injector)
 (modules test_masc_context_injector)
 (libraries masc_test_deps))

(executable
 (name tool_matrix_manifest)
 (modules tool_matrix_manifest)
 (libraries masc_test_deps keeper_tool_matrix_cases_lib))

(executable
 (name tool_matrix_case_runner)
 (modules tool_matrix_case_runner)
 (libraries masc_test_deps keeper_tool_matrix_cases_lib))

(executable
 (name keeper_tool_matrix_case_runner)
 (modules keeper_tool_matrix_case_runner)
 (libraries masc_test_deps keeper_tool_matrix_cases_lib))

; Individual test stanzas — each in its own file to prevent
; merge conflicts when multiple PRs add tests concurrently.
; To add a new test: create test/stanzas/test_name.inc and
; add one (include stanzas/test_name.inc) line below,
; sorted alphabetically.
(include stanzas/test_anti_rationalization_empty_liveness.inc)
(include stanzas/test_anti_rationalization_gate2_advisory_10113.inc)
(include stanzas/test_anti_rationalization_korean_10385.inc)
(include stanzas/test_auth_bearer_mismatch_9786.inc)
(include stanzas/test_auth_rotate_shared_tokens_10304.inc)
(include stanzas/test_auth_token_uniqueness_audit.inc)
(include stanzas/test_base_path_prod_guard.inc)
(include stanzas/test_board_api_e2e.inc)
(include stanzas/test_cascade_capability_gate.inc)
(include stanzas/test_cascade_catalog_runtime.inc)
(include stanzas/test_cascade_config_validity.inc)
(include stanzas/test_cascade_fsm.inc)
(include stanzas/test_cascade_health_tracker.inc)
(include stanzas/test_cascade_inventory.inc)
(include stanzas/test_cascade_per_candidate_telemetry.inc)
(include stanzas/test_cascade_kimi_max_context_ssot.inc)
(include stanzas/test_cascade_model_resolve.inc)
(include stanzas/test_cascade_ollama_probe.inc)
(include stanzas/test_cascade_runtime.inc)
(include stanzas/test_cascade_strategy.inc)
(include stanzas/test_cascade_trust_persist.inc)
(include stanzas/test_cdal_ledger_health_10115.inc)
(include stanzas/test_channel_gate.inc)
(include stanzas/test_channel_gate_discord_state.inc)
(include stanzas/test_channel_gate_metrics.inc)
(include stanzas/test_ci_hardening_source.inc)
(include stanzas/test_ci_run_tests_script.inc)
(include stanzas/test_codex_cli_omission_dedup_10097.inc)
(include stanzas/test_context_max_observed_9953.inc)
(include stanzas/test_continuity_forward_filter.inc)
(include stanzas/test_dashboard_goals.inc)
(include stanzas/test_dashboard_governance_metrics.inc)
(include stanzas/test_dashboard_keeper_metrics_10286.inc)
(include stanzas/test_dashboard_keeper_routes.inc)
(include stanzas/test_dashboard_tla_specs.inc)
(include stanzas/test_dated_jsonl.inc)
(include stanzas/test_dated_jsonl_mutex_registry_10372.inc)
(include stanzas/test_distributed_lock_acquire_failed_counter.inc)
(include stanzas/test_distributed_lock_backoff_jitter_9645.inc)
(include stanzas/test_env_config_coord_git_local_timeout.inc)
(include stanzas/test_env_config_dashboard_compute_timeouts.inc)
(include stanzas/test_env_config_dashboard_execution_timeouts.inc)
(include stanzas/test_env_config_dashboard_shell_prewarm.inc)
(include stanzas/test_env_config_exec_timeout_10426.inc)
(include stanzas/test_env_config_keeper_bootstrap_intervals.inc)
(include stanzas/test_env_config_keeper_poll_intervals.inc)
(include stanzas/test_env_config_sandbox.inc)
(include stanzas/test_env_config_sidecar_timeouts.inc)
(include stanzas/test_env_config_voice_bridge_timeouts.inc)
(include stanzas/test_event_kind.inc)
(include stanzas/test_fs_atomic_orphan_sweep_10130.inc)
(include stanzas/test_fs_compat_home_guard.inc)
(include stanzas/test_fsm_drift_per_agent_counter.inc)
(include stanzas/test_gate_protocol.inc)
(include stanzas/test_git_fetch_retry_script.inc)
(include stanzas/test_goal_phase_awaiting_verification_10411.inc)
(include stanzas/test_governance_cases_snapshot.inc)
(include stanzas/test_governance_response_model_empty_9880.inc)
(include stanzas/test_heartbeat_integration.inc)
(include stanzas/test_heuristic_metrics_diagnostics.inc)
(include stanzas/test_heuristic_metrics_scrub.inc)
(include stanzas/test_join_required_guard_counter.inc)
(include stanzas/test_k2_pipeline_e2e.inc)
(include stanzas/test_k3_tool_pipeline_e2e.inc)
(include stanzas/test_keeper_admission_policy.inc)
(include stanzas/test_keeper_auto_pause_blocker_persist_12683.inc)
(include stanzas/test_keeper_agent_run_sandbox_source.inc)
(include stanzas/test_keeper_autoboot_supervisor_start_10125.inc)
(include stanzas/test_keeper_cascade_auto_pause_task074.inc)
(include stanzas/test_keeper_cascade_routing.inc)
(include stanzas/test_keeper_checkpoint_classify.inc)
(include stanzas/test_keeper_compaction_noop_counter_9943.inc)
(include stanzas/test_keeper_context_bounds_ssot.inc)
(include stanzas/test_keeper_context_isolation.inc)
(include stanzas/test_keeper_cwd_response.inc)
(include stanzas/test_keeper_error_classify_recoverable.inc)
(include stanzas/test_keeper_exec_shell_cwd_response.inc)
(include stanzas/test_keeper_exec_tools.inc)
(include stanzas/test_keeper_fs.inc)
(include stanzas/test_keeper_fs_write_containment.inc)
(include stanzas/test_keeper_gh_timeout_floor.inc)
(include stanzas/test_keeper_long_turn_9943.inc)
(include stanzas/test_keeper_memory_bank_consensus_re_10399.inc)
(include stanzas/test_keeper_meta_canonical_seed.inc)
(include stanzas/test_keeper_meta_unknown_keys_warn.inc)
(include stanzas/test_keeper_semaphore_wait_queue_head_clock.inc)
(include stanzas/test_keeper_meta_heartbeat_retain_9733.inc)
(include stanzas/test_keeper_meta_merge.inc)
(include stanzas/test_keeper_mutex_coverage.inc)
(include stanzas/test_keeper_path_roots_leak_10349.inc)
(include stanzas/test_keeper_passive_loop_detector.inc)
(include stanzas/test_keeper_pause_silent_failure_source.inc)
(include stanzas/test_keeper_paused_cas_retain_9733.inc)
(include stanzas/test_keeper_personality_round_trip.inc)
(include stanzas/test_keeper_provider_token_bucket.inc)
(include stanzas/test_keeper_readonly_hints.inc)
(include stanzas/test_keeper_receipt_authoritative.inc)
(include stanzas/test_keeper_receipt_authoritative_matrix.inc)
(include stanzas/test_keeper_receipt_outcome_tla_parity.inc)
(include stanzas/test_keeper_semaphore_fairness.inc)
(include stanzas/test_keeper_semaphore_wait_counter.inc)
(include stanzas/test_keeper_shell_docker_cwd_response.inc)
(include stanzas/test_keeper_state_snapshot_json.inc)
(include stanzas/test_keeper_summarizer.inc)
(include stanzas/test_keeper_supervisor_observability_10125.inc)
(include stanzas/test_keeper_supervisor_write_meta_source.inc)
(include stanzas/test_keeper_tool_emission_hook.inc)
(include stanzas/test_keeper_tool_matrix.inc)
(include stanzas/test_keeper_turn_fsm_tla_parity.inc)
(include stanzas/test_keeper_turn_livelock_10121.inc)
(include stanzas/test_keeper_turn_up_create_meta_retry.inc)
(include stanzas/test_keeper_usage_trust_anthropic_cache_9959.inc)
(include stanzas/test_local_review_script.inc)
(include stanzas/test_magentic_ledger_cap.inc)
(include stanzas/test_masc_dirname_ssot.inc)
(include stanzas/test_mcp_post_sse_e2e.inc)
(include stanzas/test_mcp_tool_matrix.inc)
(include stanzas/test_meta_cognition_snapshot.inc)
(include stanzas/test_normalized_actor.inc)
(include stanzas/test_oas_bridge_judge_callers_9629.inc)
(include stanzas/test_oas_bridge_timeout_ssot_10094.inc)
(include stanzas/test_oas_timeout_budget_strike.inc)
(include stanzas/test_oas_worker.inc)
(include stanzas/test_oas_worker_exec_checkpoint.inc)
(include stanzas/test_openapi_api_e2e.inc)
(include stanzas/test_operator_control.inc)
(include stanzas/test_operator_mcp_e2e.inc)
(include stanzas/test_otel_genai.inc)
(include stanzas/test_otel_trace_context.inc)
(include stanzas/test_personality_diff_summary_10269.inc)
(include stanzas/test_personality_text_equal.inc)
(include stanzas/test_phase2_self_preservation.inc)
(include stanzas/test_pr_open_script.inc)
(include stanzas/test_process_eio_default_timeout.inc)
(include stanzas/test_provider_kind_resolution.inc)
(include stanzas/test_release_train_guard_script.inc)
(include stanzas/test_require_tool_use_violation_counter_10091.inc)
(include stanzas/test_sandbox_clone_conflict.inc)
(include stanzas/test_server_state_product.inc)
(include stanzas/test_smart_heartbeat_keepalive.inc)
(include stanzas/test_snapshot_size_cap.inc)
(include stanzas/test_social_state_cap.inc)
(include stanzas/test_social_state_cap_on_load.inc)
(include stanzas/test_sse_storm_e2e.inc)
(include stanzas/test_start_masc_mcp_script.inc)
(include stanzas/test_supervisor_start_predicate.inc)
(include stanzas/test_telemetry_task_transition_10358.inc)
(include stanzas/test_timeout_policy.inc)
(include stanzas/test_timeout_policy_overshoot_counter.inc)
(include stanzas/test_tla_literal_parity.inc)
(include stanzas/test_tool_call_replay_harness.inc)
(include stanzas/test_tool_diversity.inc)
(include stanzas/test_tool_help_registry_shard_coverage_10101.inc)
(include stanzas/test_tool_name.inc)
(include stanzas/test_tool_task_completion_example.inc)
(include stanzas/test_transport_bridge_seal.inc)
(include stanzas/test_work_as_heartbeat.inc)
(include stanzas/test_worker_safety_gates.inc)

(test
 (name test_dashboard_yjs)
 (modules test_dashboard_yjs)
 (libraries masc_test_deps))
