[package]
name = "masc-viewer"
version = "0.1.0"
edition = "2021"
description = "Multi-mode MASC visualization platform — WebGPU rendered via Bevy"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "2d",
    "webgl2",
    "jpeg",
    "bevy_ui",
    "bevy_text",
    "bevy_picking",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "EventSource",
    "MessageEvent",
    "Document",
    "DomTokenList",
    "History",
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlOptionsCollection",
    "HtmlOptionElement",
    "HtmlSelectElement",
    "CssStyleDeclaration",
    "KeyboardEvent",
    "Location",
    "Storage",
    "Window",
    "Element",
    "EventTarget",
    "Event",
    "NodeList",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Blob",
    "Url",
    "HtmlAudioElement",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "Performance",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
log = "0.4"

[profile.release]
opt-level = "z"
lto = "thin"
strip = "debuginfo"
codegen-units = 1
